[package]
name = "expedition"
version = "0.1.0"
edition = "2021"
description = "Rich text styling and formatting library"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
homepage = "https://github.com/aecsocket/expedition"
repository = "https://github.com/aecsocket/expedition"
keywords = [ "gamedev", "gui" ]
categories = [ "game-development", "gui" ]
license = "MIT OR Apache-2.0"

[features]
serde = [ "dep:serde", "ecolor/serde" ]
termcolor = [ "dep:termcolor" ]
egui = [ "dep:egui" ]

[dependencies]
ecolor = "0.22"
itertools = "0.11"
serde = { version = "1", features = [ "derive" ], optional = true }
termcolor = { version = "1", optional = true }
egui = { version = "0.22", optional = true }
