[package]
name = "expedition"
version = "0.1.0"
edition = "2021"
description = "Rich text styling and formatting library"
authors = [ "aecsocket <aecsocket@tutanota.com>" ]
homepage = "https://github.com/aecsocket/expedition"
repository = "https://github.com/aecsocket/expedition"
keywords = [ "gamedev", "gui" ]
categories = [ "game-development", "gui" ]
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
all-features = true

[features]
## Allows serialization using [`serde`](https://docs.rs/serde).
serde = [ "dep:serde", "ecolor/serde", "egui/serde" ]

## Allows output to a terminal using ANSI color codes from [`termcolor`](https://docs.rs/termcolor).
termcolor = [ "dep:termcolor" ]

## Allows output to an [`egui`](https://docs.rs/egui) TextFormat, used in text labels.
egui = [ "dep:egui" ]

[dependencies]
ecolor = "0.22"
itertools = "0.11"
serde = { version = "1", features = [ "derive" ], optional = true }
termcolor = { version = "1", optional = true }
egui = { version = "0.22", optional = true }
document-features = { version = "0.2", optional = true }
